src/objects/OED__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OED</relationshipLabel>
        <relationshipName>OED</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GW_Gross_Value_Month__c</fullName>
        <label>Gross Value (Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GW_Gross_Value_PY__c</fullName>
        <label>Gross Value (PY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GW_Gross_Value_Year__c</fullName>
        <label>Gross Value (Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GW_Value_Month__c</fullName>
        <label>Value % (Month)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GW_Value_PY__c</fullName>
        <label>Value % (PY)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GW_Value_Year__c</fullName>
        <label>Value % (Year)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PN_Gross_Value_Month__c</fullName>
        <label>Gross Value (Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PN_Gross_Value_PY__c</fullName>
        <label>Gross Value (PY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PN_Gross_Value_Year__c</fullName>
        <label>Gross Value (Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PN_Value_PY__c</fullName>
        <label>Value % (PY)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PN_Value_Percent_Month__c</fullName>
        <label>Value % (Month)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PN_Value_Year__c</fullName>
        <label>Value % (Year)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SU_Gross_Value_Month__c</fullName>
        <label>Gross Value (Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SU_Gross_Value_PY__c</fullName>
        <label>Gross Value (PY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SU_Gross_Value_Year__c</fullName>
        <label>Gross Value (Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SU_Value_Month__c</fullName>
        <label>Value % (Month)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SU_Value_PY__c</fullName>
        <label>Value % (PY)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SU_Value_Year__c</fullName>
        <label>Value % (Year)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WA_Gross_Value_Month__c</fullName>
        <label>Gross Value (Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WA_Gross_Value_PY__c</fullName>
        <label>Gross Value (PY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WA_Gross_Value_Year__c</fullName>
        <label>Gross Value (Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WA_Value_Month__c</fullName>
        <label>Value % (Month)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WA_Value_PY__c</fullName>
        <label>Value % (PY)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WA_Value_Year__c</fullName>
        <label>Value % (Year)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>OED</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OED-{0000}</displayFormat>
        <label>OED Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OED</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>